<resources>
    <!--Error section-->
    <string name="something_wrong">Whoops! Something went wrong</string>

    <string name="app_name">Oche-app-final-gorbatyuk</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="onboarding1_text1">Quick Delivery At Your Doorstep</string>
    <string name="onboarding1_text2">Enjoy quick pick-up and delivery to your destination</string>
    <string name="onboarding2_text1">Flexible Payment</string>
    <string name="onboarding2_text2">Different modes of payment either before and after delivery without stress</string>
    <string name="onboarding3_text1">Real-time Tracking</string>
    <string name="onboarding3_text2">Track your packages/items from the comfort of your home till final destination</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="create_an_account">Create an account</string>
    <string name="complete_the_sign_up">Complete the sign up process to get started</string>
    <string name="full_name">Full name</string>
    <string name="ivanov_ivan">Ivanov Ivan</string>
    <string name="phone_number">Phone Number</string>
    <string name="_7_999_999_99_99">+7(999)999-99-99</string>
    <string name="email_address">Email Address</string>
    <string name="mail_com">***********@mail.com</string>
    <string name="password">Password</string>
    <string name="stars">**********</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="private_policy">By ticking this box, you agree to our Terms and conditions and private policy</string>
    <string name="or_sign_in_using">or sign in using</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="fill_in_your_email_and_password_to_continue">Fill in your email and password to continue</string>
    <string name="remember_password">Remember password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log in</string>
    <string name="or_log_in_using">or log in using</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="send_otp">Send OTP</string>
    <string name="remember_password_back_to">Remember password? Back to</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_the_6_digit_numbers">Enter the 6 digit numbers sent to your email</string>
    <string name="if_you_didn_t_receive_code">If you didn’t receive code,</string>
    <string name="resend_after_1_00">resend after 1:00</string>
    <string name="set_new_password">Set New Password</string>
    <string name="navigationhome">Home</string>
    <string name="navigationwallet">Wallet</string>
    <string name="navigationtrack">Track</string>
    <string name="navigationprofile">Profile</string>
    <string name="profile_fullname">Hello Ken</string>
    <string name="current_balance">Current balance:</string>
    <string name="examplebalance">N10,712:00</string>
    <string name="enable_dark_mode">Enable dark Mode</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name_phone_no_address_email">Name, phone no, address, email ...</string>
    <string name="you_have_no_notifications">You have no notifications</string>
    <string name="go_back_to_homepage">Go back to homepage</string>
    <string name="track_my_item">Track my item</string>
    <string name="tracking_number">Tracking Number:</string>
    <string name="your_rider_is_on_the_way">Your rider is on the way to your destination</string>
    <string name="transaction_successful">Transaction Successful</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="others">Others</string>
    <string name="state_country">State, Country</string>
    <string name="address">Address</string>
    <string name="origin_details">Origin Details</string>
    <string name="destination_details">Destination Details</string>
    <string name="package_items">Package items</string>
    <string name="weight_of_items_kg">Weight of items (kg)</string>
    <string name="worth_of_items">Worth of items</string>
    <string name="tracking_number_example">R-7458-4567-4434-5854</string>
    <string name="package_status">Package Status</string>
    <string name="courier_requested">Courier requested</string>
    <string name="july_7_2022">July 7 2022</string>
    <string name="_08_00am">08:00am</string>
    <string name="package_ready_for_delivery">Package ready for delivery</string>
    <string name="_08_30am">08:30am</string>
    <string name="package_in_transit">Package in transit</string>
    <string name="_10_30am">10:30am</string>
    <string name="view_package_info">View Package Info</string>
    <string name="package_delivered">Package delivered</string>
    <string name="top_up">Top Up</string>
    <string name="bank">Bank</string>
    <string name="transaction_history">Transaction History</string>
    <string name="card">Card</string>
    <string name="transfer">Transfer</string>
    <string name="n2_000_00">N2,000.00</string>
    <string name="income_description">Income description</string>
    <string name="select_delivery_type">Select delivery type</string>
    <string name="package_details">Package Details</string>
    <string name="instant_delivery">Instant delivery</string>
    <string name="scheduled_delivery">Scheduled delivery</string>
    <string name="package_information">Package Information</string>
    <string name="mbaraugba_ovom_amaa_asaa_abia_state">Mbaraugba, Ovom Amaa Asaa, Abia state</string>
    <string name="destination_details_text">destination details text</string>
    <string name="other_details">Other details</string>
    <string name="books_ans_stationary_garri_ngwa">Books ans stationary, Garri Ngwa</string>
    <string name="weight_of_items">Weight of items</string>
    <string name="_1000kg">1000kg</string>
    <string name="r_7458_4567_4434_5854">R-7458-4567-4434-5854</string>
    <string name="charges">Charges</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="n2_500_00">N2,500.00</string>
    <string name="n300_00">N300.00</string>
    <string name="tax_and_service_charges">Tax and Service Charges</string>
    <string name="n200_00">N200.00</string>
    <string name="package_total">Package total</string>
    <string name="n3000_00">N3000.00</string>
    <string name="edit_package">Edit package</string>
    <string name="make_payment">Make payment</string>
    <string name="_234_56543_96854">+234 56543 96854</string>
    <string name="n50_000">N50,000</string>
    <string name="click_on_delivered_for_successful_delivery_and_rate_rider_or_report_missing_item">Click on delivered for successful delivery and rate rider or report missing item</string>
    <string name="report">Report</string>
    <string name="successful">Successful</string>
    <string name="done">Done</string>
    <string name="rate_rider">Rate Rider</string>
    <string name="add_feedback">Add feedback</string>
    <string name="pay_with_wallet">Pay with wallet</string>
    <string name="complete_the_payment_using_your_e_wallet">complete the payment using your e wallet</string>
    <string name="credit_debit_card">Credit / debit card</string>
    <string name="complete_the_payment_using_your_debit_card">complete the payment using your debit card</string>
    <string name="_3323">**** **** 3323</string>
    <string name="_1547">**** **** 1547</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="special_for_you">Special for you</string>
    <string name="search_services">Search services</string>
    <string name="we_trust_you_are_having">We trust you are having a great time</string>
    <string name="what_would_you_like_to_do">What would you like to do</string>
    <string name="customer_care">Customer Care</string>
    <string name="our_customer_care_service">Our customer care service line is available from 8 - 9pm week days and 9 - 5 weekends - tap to call us today</string>
    <string name="send_a_package">Send a package</string>
    <string name="request_for_a_driver">Request for a driver to pick up or deliver your package for you</string>
    <string name="fund_your_wallet">Fund your wallet</string>
    <string name="to_fund_your_wallet_is_as_easy">To fund your wallet is as easy as ABC, make use of our fast technology and top-up your wallet today</string>
    <string name="chats">Chats</string>
    <string name="search_for_available_rider">Search for available rider within your area</string>
    <string name="search_for_a_driver">Search for a driver</string>
    <string name="john_joshua">John Joshua</string>
    <string name="thanks_for_your_service">Thanks for your service</string>
    <string name="_2">2</string>
    <string name="enter_message">Enter message</string>
    <string name="calling">calling...</string>
    <string name="r_456_223u">R-456-223U</string>
    <string name="gender">Gender</string>
    <string name="m">M</string>
    <string name="registration_number">Registration Number</string>
    <string name="honda_accord">Honda accord</string>
    <string name="car_model">Car Model</string>
    <string name="customer_reviews">Customer Reviews</string>
    <string name="view_more">View More</string>
    <string name="call_rider">Call Rider</string>
    <string name="send_message">Send Message</string>
    <string name="online">Online</string>

</resources>