<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.oche_app_final.fragment.HomeFragment"
        android:label="@string/navigationhome"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.example.oche_app_final.fragment.WalletFragment"
        android:label="@string/navigationwallet"
        tools:layout="@layout/fragment_wallet" />

    <fragment
        android:id="@+id/navigation_track"
        android:name="com.example.oche_app_final.fragment.TrackFragment"
        android:label="@string/navigationtrack"
        tools:layout="@layout/fragment_track" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.oche_app_final.fragment.ProfileFragment"
        android:label="@string/navigationprofile"
        tools:layout="@layout/fragment_profile" />

</navigation>