<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout"
    tools:context=".activity.RecieptActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/PrimaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/package_information"
            android:textColor="@color/blue_primary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            style="@style/PrimaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/origin_details"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/orAddress"
            style="@style/SecondTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mbaraugba_ovom_amaa_asaa_abia_state"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/orPhone"
            style="@style/SecondTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_234_56543_96854"
            android:textSize="12sp" />

        <TextView
            style="@style/PrimaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/destination_details"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/DestinationDetails"
            style="@style/SecondTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination_details_text"
            android:textSize="12sp" />

        <TextView
            style="@style/PrimaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/other_details"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/SecondTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/package_details"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/otherPackageItems"
                style="@style/SecondTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/books_ans_stationary_garri_ngwa"
                android:textAlignment="viewEnd"
                android:textColor="@color/orange_secondary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/SecondTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_of_items"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/otherWeight"
                style="@style/SecondTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1000kg"
                android:textAlignment="viewEnd"
                android:textColor="@color/orange_secondary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/SecondTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/worth_of_items"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/otherWorth"
                style="@style/SecondTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n50_000"
                android:textAlignment="viewEnd"
                android:textColor="@color/orange_secondary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/SecondTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tracking_number"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/otherTrackingNum"
                style="@style/SecondTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/r_7458_4567_4434_5854"
                android:textAlignment="viewEnd"
                android:textColor="@color/orange_secondary"
                android:textSize="12sp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/light_gray_color" />

        <TextView
            style="@style/PrimaryTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/charges"
            android:textColor="@color/blue_primary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/SecondTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_charges"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/chargesDeliv"
                style="@style/SecondTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n2_500_00"
                android:textAlignment="viewEnd"
                android:textColor="@color/orange_secondary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/SecondTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instant_delivery"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/chargesInstant"
                style="@style/SecondTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n300_00"
                android:textAlignment="viewEnd"
                android:textColor="@color/orange_secondary"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/SecondTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tax_and_service_charges"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/chargesTax"
                style="@style/SecondTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n200_00"
                android:textAlignment="viewEnd"
                android:textColor="@color/orange_secondary"
                android:textSize="12sp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/light_gray_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                style="@style/SecondTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/package_total"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvTotal"
                style="@style/SecondTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n3000_00"
                android:textAlignment="viewEnd"
                android:textColor="@color/orange_secondary"
                android:textSize="12sp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ControlPackage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonEditPackage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/secondary_button"
                android:text="@string/edit_package"
                android:textAllCaps="false"
                android:textColor="@color/blue_primary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonMakePayment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/primary_button"
                android:text="@string/make_payment"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/DeliverySuccessful"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/click_on_delivered_for_successful_delivery_and_rate_rider_or_report_missing_item"
                android:textAllCaps="false"
                android:textColor="@color/blue_primary"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonReport"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="200dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/secondary_button"
                android:text="@string/report"
                android:textAllCaps="false"
                android:textColor="@color/blue_primary"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonSuccessful"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="200dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/primary_button"
                android:text="@string/successful"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/buttonReport"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>