<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BottomShadowStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    android:orientation="horizontal"
    android:paddingStart="12dp"
    android:paddingTop="4dp"
    android:paddingEnd="12dp"
    android:paddingBottom="4dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/amountTextView"
            style="@style/RobotoBold16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n2_000_00" />

        <TextView
            android:id="@+id/descriptionTextView"
            style="@style/RobotoRegular12spLightBlackText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income_description" />

    </LinearLayout>

    <TextView
        android:id="@+id/dateTextView"
        style="@style/RobotoRegular12spGrayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/july_7_2022" />

</LinearLayout>